Lesson 3 final commit

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>INSERT YOUR NAME</title>
+    <title>Ryan Lindner</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -65,7 +65,7 @@
         <div class="headline">
             <div class="container">
                 <h2>Lesson 3 Highlights</h2>
-                <h3>INSERT YOUR NAME</h3>
+                <h3>Ryan Lindner</h3>
             </div>
         </div>
     </header>
@@ -77,55 +77,55 @@
 
         <!-- First Featurette -->
         <div class="featurette" id="topic1">
-            <img class="featurette-image img-circle img-responsive pull-right" src="http://placehold.it/500x500">
+            <img class="featurette-image img-circle img-responsive pull-right" src="images/organize.jpg">
             <h2 class="featurette-heading">Highlight #1
-                <span class="text-muted">Topic 1 Header</span>
+                <span class="text-muted">Version Control</span>
             </h2>
-            <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
+            <p class="lead">Version Control is the concept of keeping track of all "versions" and revisions of a computer file. This could be any type of file, maybe the changes to a website graphic, a websites css code, or every single piece of code associated with a website. Version control seeks to make tracking a files history and development in an organized way. If a user needs to go back to a previous version of a file, it should be easy to track down and locate the desired file. It's like organizing all your files in a digital file cabinet.</p>
         </div>
 
         <hr class="featurette-divider">
 
         <!-- Second Featurette -->
         <div class="featurette" id="topic2">
-            <img class="featurette-image img-circle img-responsive pull-left" src="http://placehold.it/500x500">
+            <img class="featurette-image img-circle img-responsive pull-left" src="images/git.jpg">
             <h2 class="featurette-heading">Highlight #2
-                <span class="text-muted">Topic 2 Header</span>
+                <span class="text-muted">Git</span>
             </h2>
-            <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
+            <p class="lead">Git is an example of a version control system. It is a system designed to make accessing and tracking all files in a project easy and well organized. Git can be very useful when a team of web developers are working on a project together. It allows every developer on the team to have a copy of the code on their computer every developer is able to make changes to the code and upload the changes to the remote repository. Every change that each developer makes can be neatly organized by date and other team members can see who made what changes to the code and why they made such changes.</p>
         </div>
 
         <hr class="featurette-divider">
 
         <!-- Third Featurette -->
         <div class="featurette" id="topic3">
-            <img class="featurette-image img-circle img-responsive pull-right" src="http://placehold.it/500x500">
+            <img class="featurette-image img-circle img-responsive pull-right" src="images/mac.jpg">
             <h2 class="featurette-heading">Highlight #3
-                <span class="text-muted">Topic 3 Header</span>
+                <span class="text-muted">Local Repository</span>
             </h2>
-            <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
+            <p class="lead">When using Git, a user will have all of the project files located on their computer inside of what's called a "local repository." The idea is for all team members to have the project files available inside of their own computer locally so that they can edit or make changes to the files without being connected to a server or without even needing internet. If you have 10 team members that all have the project files installed locally on their computer this also serves as a good way to 'back up' all the project files if one of the team members computers dies or gets corrupted.</p>
         </div>
         
         <hr class="featurette-divider">
         
        <!-- Fourth Featurette -->
         <div class="featurette" id="topic4">
-            <img class="featurette-image img-circle img-responsive pull-left" src="http://placehold.it/500x500">
+            <img class="featurette-image img-circle img-responsive pull-left" src="images/servers.jpg">
             <h2 class="featurette-heading">Highlight #4
-                <span class="text-muted">Topic 4 Header</span>
+                <span class="text-muted">Remote Repository</span>
             </h2>
-            <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
+            <p class="lead">After a user makes changes to the project files locally on their computer, they will then 'push' the changes to what's known as a "remote repository." This is a central storage space on a server that every one of the team members can send their changes and revisions to the code to. This is useful because it acts as the hub between all of the team members working on the project. If a team member needs to re-download all of the files associated with a project, they can do that from the remote repository.</p>
         </div>
 
         <hr class="featurette-divider">
 
         <!-- Fifth Featurette -->
         <div class="featurette" id="topic5">
-            <img class="featurette-image img-circle img-responsive pull-right" src="http://placehold.it/500x500">
+            <img class="featurette-image img-circle img-responsive pull-right" src="images/commands.png">
             <h2 class="featurette-heading">Highlight #5
-                <span class="text-muted">Topic 5 Header</span>
+                <span class="text-muted">Basic Git Commands: Add, Commit, Push</span>
             </h2>
-            <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
+            <p class="lead">Three basic commands used in Git are Add, Commit and Push. A user will use "Add" a file to their local repository. This is needed in order to let Git know that you would like to start tracking the files versioning and changes from here on out. A user will use the "Commit" command when they have finished editing a file from their local repository. It's much like "saving" your changes to a file locally. Once the user is ready to push the newly edited file or files up to the remote repository, they will use the "Push" command. This will update the files on the remote reposity to reflect the changes. </p>
         </div>
 
         <hr class="featurette-divider">
